{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 438,
  "lineage": "531c9c97-4148-fec8-a86b-3aed35b43b5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07959acd277df99e7",
            "arn": "arn:aws:ec2:us-east-1:690049365056:instance/i-0f6ee0db29e066d34",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6ee0db29e066d34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "sgss_alx_key_pair_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-043eadf74ac3946b5"
              }
            ],
            "primary_network_interface_id": "eni-043eadf74ac3946b5",
            "private_dns": "ip-10-4-11-252.ec2.internal",
            "private_ip": "10.4.11.252",
            "public_ip": "34.235.113.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08eb4f5729b0edab4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e03d91ce404a738f",
            "tags": {
              "HostName": "gitlab.dev.sgssnrl.network",
              "Name": "gitlab-base-for-ami",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tags_all": {
              "HostName": "gitlab.dev.sgssnrl.network",
              "Name": "gitlab-base-for-ami",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.gitlab",
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_ami.Amazon_Linux2",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet",
            "tls_private_key.ssh"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publichost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07959acd277df99e7",
            "arn": "arn:aws:ec2:us-east-1:690049365056:instance/i-01d3c3483a020895b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d3c3483a020895b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "sgss_alx_key_pair_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f8233eb6530724a7"
              }
            ],
            "primary_network_interface_id": "eni-0f8233eb6530724a7",
            "private_dns": "ip-10-4-10-59.ec2.internal",
            "private_ip": "10.4.10.59",
            "public_ip": "54.226.6.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa55f7546a111916",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ef6325666d27e16",
            "tags": {
              "HostName": "bastion.gitlab.dev.sgssnrl.network",
              "Name": "AWS-Bastion-1",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tags_all": {
              "HostName": "bastion.gitlab.dev.sgssnrl.network",
              "Name": "AWS-Bastion-1",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.public",
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_ami.Amazon_Linux2",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet",
            "tls_private_key.ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07959acd277df99e7",
            "arn": "arn:aws:ec2:us-east-1:690049365056:instance/i-020ee1968867d4362",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020ee1968867d4362",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "sgss_alx_key_pair_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-043de1f954b52c66c"
              }
            ],
            "primary_network_interface_id": "eni-043de1f954b52c66c",
            "private_dns": "ip-10-4-11-41.ec2.internal",
            "private_ip": "10.4.11.41",
            "public_ip": "35.153.100.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e786fecb2b49a6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e03d91ce404a738f",
            "tags": {
              "HostName": "bastion.gitlab.dev.sgssnrl.network",
              "Name": "AWS-Bastion-2",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tags_all": {
              "HostName": "bastion.gitlab.dev.sgssnrl.network",
              "Name": "AWS-Bastion-2",
              "Project": "RDT_CDO_AWS_Gitlab"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.public",
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_ami.Amazon_Linux2",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:network-interface/eni-043eadf74ac3946b5",
            "attachment": [
              {
                "attachment_id": "eni-attach-01b6a014b9d11692e",
                "device_index": 0,
                "instance": "i-0f6ee0db29e066d34"
              }
            ],
            "id": "eni-043eadf74ac3946b5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:30:1c:ed:d8:e9",
            "owner_id": "690049365056",
            "private_ip": "10.4.11.252",
            "private_ip_list": [
              "10.4.11.252"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.4.11.252"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e03d91ce404a738f",
            "tags": {
              "Name": "Public NetWork Interface Gitlab-ami",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Public NetWork Interface Gitlab-ami",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:network-interface/eni-0f8233eb6530724a7",
            "attachment": [
              {
                "attachment_id": "eni-attach-08dd2bf02a04a78ca",
                "device_index": 0,
                "instance": "i-01d3c3483a020895b"
              }
            ],
            "id": "eni-0f8233eb6530724a7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:dd:54:04:9b:cf",
            "owner_id": "690049365056",
            "private_ip": "10.4.10.59",
            "private_ip_list": [
              "10.4.10.59"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.4.10.59"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ef6325666d27e16",
            "tags": {
              "Name": "Public NetWork Interface 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Public NetWork Interface 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:network-interface/eni-043de1f954b52c66c",
            "attachment": [
              {
                "attachment_id": "eni-attach-0123b1222d00233f9",
                "device_index": 0,
                "instance": "i-020ee1968867d4362"
              }
            ],
            "id": "eni-043de1f954b52c66c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:2a:3e:1a:97:53",
            "owner_id": "690049365056",
            "private_ip": "10.4.11.41",
            "private_ip_list": [
              "10.4.11.41"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.4.11.41"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03e833868929021eb",
              "sg-0afd050d888463c57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e03d91ce404a738f",
            "tags": {
              "Name": "Public NetWork Interface 2",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Public NetWork Interface 2",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_security_group.RemoteAccess",
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RemoteAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-0afd050d888463c57",
            "description": "Allow http web sites",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd050d888463c57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "RemoteAccess",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RemoteAccess",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "RemoteAccess",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-093daac6a33342235",
            "description": "Allow ssh from/to anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093daac6a33342235",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_ssh",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-all_ssh",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sg-all_ssh",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-03e833868929021eb",
            "description": "Allow http web sites",
            "egress": [],
            "id": "sg-03e833868929021eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "96.255.55.4/32",
                  "70.168.178.194/32",
                  "172.58.228.37/32"
                ],
                "description": "Allow remote SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "RemoteSSH",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RemoteSSH",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "RemoteSSH",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_remote_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "96.255.55.4/32",
              "70.168.178.194/32",
              "172.58.228.37/32"
            ],
            "description": "Allow remote SSH access",
            "from_port": 22,
            "id": "sgrule-1349034003",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e833868929021eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.remote_ssh",
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rdt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:vpc/vpc-01215ec8629b1f5a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0ecd8da49794d1b69",
            "default_route_table_id": "rtb-083cab73e04e87c31",
            "default_security_group_id": "sg-0b679a3cb46976016",
            "dhcp_options_id": "dopt-057f3fcc5ca5c6199",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01215ec8629b1f5a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083cab73e04e87c31",
            "owner_id": "690049365056",
            "tags": {
              "Environment": "PROD",
              "Managed_By": "RDT-gov",
              "Name": "RDT-vpc",
              "ResponsibleParty": "AntennaServices"
            },
            "tags_all": {
              "Environment": "PROD",
              "Managed_By": "RDT-gov",
              "Name": "RDT-vpc",
              "ResponsibleParty": "AntennaServices"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:loadbalancer/app/Gitlab-ALB/98630dbb975e8498",
            "arn_suffix": "app/Gitlab-ALB/98630dbb975e8498",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Gitlab-ALB-694693839.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:loadbalancer/app/Gitlab-ALB/98630dbb975e8498",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Gitlab-ALB",
            "security_groups": [
              "sg-0e782ba434f3fe206"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ef6325666d27e16"
              },
              {
                "subnet_id": "subnet-0e03d91ce404a738f"
              }
            ],
            "subnets": [
              "subnet-01ef6325666d27e16",
              "subnet-0e03d91ce404a738f"
            ],
            "tags": {
              "Name": "GitLab ALB",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab ALB",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": " Site Not Found",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:loadbalancer/app/Gitlab-ALB/98630dbb975e8498",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.alb.aws_alb.alb",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "high",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsHigh/bc254efc87368dde",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener-rule/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221/a87926710b66a9ea",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "myprivate.high.private"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener-rule/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221/a87926710b66a9ea",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_listener.http",
            "module.alb.aws_alb_target_group.high",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "low",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsLow/75f4cfe6bc4baa51",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener-rule/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221/889e53d493db802f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "myprivate.low.private"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener-rule/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221/889e53d493db802f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:listener/app/Gitlab-ALB/98630dbb975e8498/e141ab24b6279221",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_listener.http",
            "module.alb.aws_alb_target_group.low",
            "module.alb.aws_security_group.alb",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "high",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsHigh/bc254efc87368dde",
            "arn_suffix": "targetgroup/DevSecOpsHigh/bc254efc87368dde",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsHigh/bc254efc87368dde",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DevSecOpsHigh",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 60,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "low",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsLow/75f4cfe6bc4baa51",
            "arn_suffix": "targetgroup/DevSecOpsLow/75f4cfe6bc4baa51",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690049365056:targetgroup/DevSecOpsLow/75f4cfe6bc4baa51",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DevSecOpsLow",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 60,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-0e782ba434f3fe206",
            "description": "Gitlab Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e782ba434f3fe206",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gitlab_alb_security_group",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-all",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sg-all",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "high",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-0304f587d81c1bb25",
            "description": "Allow Access only devsecops from high area",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0304f587d81c1bb25",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.4.10.0/24"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevSecOpsHigh",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevSecOpsHigh",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "DevSecOpsHigh",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "low",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-0e0eeef676860405f",
            "description": "Allow Access only from low Area",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0eeef676860405f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.4.11.0/24"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevSecOpsLow",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevSecOpsLow",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "DevSecOpsLow",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024c5f06e3bd6652c",
            "association_id": "eipassoc-0cb73e6871d7718f0",
            "domain": "vpc",
            "id": "eipalloc-024c5f06e3bd6652c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bff53a57931bce70",
            "private_dns": "ip-10-4-10-100.ec2.internal",
            "private_ip": "10.4.10.100",
            "public_dns": "ec2-3-229-233-182.compute-1.amazonaws.com",
            "public_ip": "3.229.233.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "module.networking.aws_internet_gateway.ig"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d053da7cb92e8da2",
            "association_id": "eipassoc-0efd9f7aad6342963",
            "domain": "vpc",
            "id": "eipalloc-0d053da7cb92e8da2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd39b81ff05f25b3",
            "private_dns": "ip-10-4-11-246.ec2.internal",
            "private_ip": "10.4.11.246",
            "public_dns": "ec2-54-175-211-94.compute-1.amazonaws.com",
            "public_ip": "54.175.211.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "module.networking.aws_internet_gateway.ig"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:internet-gateway/igw-0f215ecc4254bffc8",
            "id": "igw-0f215ecc4254bffc8",
            "owner_id": "690049365056",
            "tags": {
              "Environment": "PROD",
              "Managed_By": "rdt-gov",
              "Name": "rdt-igw",
              "ResponsibleParty": "AntennaServices"
            },
            "tags_all": {
              "Environment": "PROD",
              "Managed_By": "rdt-gov",
              "Name": "rdt-igw",
              "ResponsibleParty": "AntennaServices"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024c5f06e3bd6652c",
            "connectivity_type": "public",
            "id": "nat-0f0571dd39afd8e55",
            "network_interface_id": "eni-0bff53a57931bce70",
            "private_ip": "10.4.10.100",
            "public_ip": "3.229.233.182",
            "subnet_id": "subnet-01ef6325666d27e16",
            "tags": {
              "Name": "GitLab NAT Gateway Public 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab NAT Gateway Public 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d053da7cb92e8da2",
            "connectivity_type": "public",
            "id": "nat-0d6407ccd2baebad2",
            "network_interface_id": "eni-0bd39b81ff05f25b3",
            "private_ip": "10.4.11.246",
            "public_ip": "54.175.211.94",
            "subnet_id": "subnet-0e03d91ce404a738f",
            "tags": {
              "Name": "GitLab NAT Gateway Public 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab NAT Gateway Public 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-036ecc236dbe427bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0571dd39afd8e55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036ecc236dbe427bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.public_nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0754845518c0c37061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d6407ccd2baebad2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0754845518c0c3706",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.public_nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f215ecc4254bffc8",
            "id": "r-rtb-0bf254ee686c0f06e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf254ee686c0f06e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f215ecc4254bffc8",
            "id": "r-rtb-09212ea0825c19a251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09212ea0825c19a25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:route-table/rtb-036ecc236dbe427bd",
            "id": "rtb-036ecc236dbe427bd",
            "owner_id": "690049365056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0571dd39afd8e55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GitLab Private Route Table 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Private Route Table 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:route-table/rtb-0754845518c0c3706",
            "id": "rtb-0754845518c0c3706",
            "owner_id": "690049365056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d6407ccd2baebad2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GitLab Private Route Table 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Private Route Table 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:route-table/rtb-0bf254ee686c0f06e",
            "id": "rtb-0bf254ee686c0f06e",
            "owner_id": "690049365056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f215ecc4254bffc8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GitLab Public Route Table 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Public Route Table 0",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:route-table/rtb-09212ea0825c19a25",
            "id": "rtb-09212ea0825c19a25",
            "owner_id": "690049365056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f215ecc4254bffc8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GitLab Public Route Table 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Public Route Table 1",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea48e93cb6693a96",
            "route_table_id": "rtb-036ecc236dbe427bd",
            "subnet_id": "subnet-0c5091b2e49aa3da9"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf82947809e1d96",
            "route_table_id": "rtb-0754845518c0c3706",
            "subnet_id": "subnet-0b8fcc0540f5eb43a"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4091a9465b6300f",
            "route_table_id": "rtb-0bf254ee686c0f06e",
            "subnet_id": "subnet-01ef6325666d27e16"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f82c63aeaf196bd",
            "route_table_id": "rtb-09212ea0825c19a25",
            "subnet_id": "subnet-0e03d91ce404a738f"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:security-group/sg-0e1c0c68f75d8e6f3",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0e1c0c68f75d8e6f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "RDT_CDO_AWS_Gitlab-default-sg",
            "name_prefix": "",
            "owner_id": "690049365056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GitLab Default Security Group",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Default Security Group",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rdt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:subnet/subnet-0c5091b2e49aa3da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5091b2e49aa3da9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690049365056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GitLab Private Subnet-us-east-1a",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Private Subnet-us-east-1a",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:subnet/subnet-0b8fcc0540f5eb43a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8fcc0540f5eb43a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690049365056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GitLab Private Subnet-us-east-1b",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Private Subnet-us-east-1b",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:subnet/subnet-01ef6325666d27e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ef6325666d27e16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690049365056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GitLab Public Subnet-us-east-1a",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Public Subnet-us-east-1a",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690049365056:subnet/subnet-0e03d91ce404a738f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e03d91ce404a738f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690049365056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GitLab Public Subnet-us-east-1b",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "GitLab Public Subnet-us-east-1b",
              "Project": "RDT_CDO_AWS_Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01215ec8629b1f5a5"
          },
          "dependencies": [
            "aws_vpc.rdt_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}